Corrected overflow

--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,6 @@
     position: relative;
     height: 100%;
 }
+main{
+    scrollbar-width: none;
+}
